--- a/Tasks/Tasks/Resources/Base.lproj/Main.storyboard
+++ b/Tasks/Tasks/Resources/Base.lproj/Main.storyboard
@@ -16,7 +16,7 @@
         </array>
     </customFonts>
     <scenes>
-        <!--Tasks-->
+        <!--Taskr-->
         <scene sceneID="5la-8G-DbN">
             <objects>
                 <tableViewController id="NEY-So-hQF" customClass="TasksTableViewController" customModule="Tasks" customModuleProvider="target" sceneMemberID="viewController">
@@ -53,7 +53,7 @@
                             <outlet property="delegate" destination="NEY-So-hQF" id="jW8-61-piG"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Tasks" id="FUm-j1-Dc8">
+                    <navigationItem key="navigationItem" title="Taskr" id="FUm-j1-Dc8">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="aIU-0T-di6">
                             <connections>
                                 <segue destination="WI2-wJ-dAU" kind="show" identifier="ShowCreateTask" id="37B-hs-oKJ"/>
@@ -70,7 +70,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="p1s-Ss-srs" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="674" y="153"/>
+            <point key="canvasLocation" x="672.79999999999995" y="152.47376311844079"/>
         </scene>
         <!--Title-->
         <scene sceneID="o2c-sk-SY4">
@@ -165,10 +165,10 @@
             </objects>
             <point key="canvasLocation" x="1433" y="152"/>
         </scene>
-        <!--Navigation Controller-->
+        <!--Tasks Navigation Controller-->
         <scene sceneID="1oE-sl-R0M">
             <objects>
-                <navigationController id="9Uj-aG-aHH" sceneMemberID="viewController">
+                <navigationController id="9Uj-aG-aHH" customClass="TasksNavigationController" customModule="Tasks" customModuleProvider="target" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="blj-OQ-DUy">
                         <rect key="frame" x="0.0" y="20" width="375" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
